--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Vitoria Moreno-Costa</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,19 +40,18 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Vitoria
+                        <span class="text-primary">Moreno-Costa</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        Data Scientist | Palo Alto, CA | 
+                        <a href="mailto:vmorenocosta@gmail.com">vmorenocosta@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">I am a data scientist with 4 years of professional experience in chemical engineering collaborating with multidisciplinary operations and research teams. At heart, I am a connector, passionate about bringing people together to solve problems, and in practice, I am determined to be an inquisitive and dependable team member. I attribute my success to my tenacity and the trust that I inspire in others that I will accomplish the task at hand. These traits, along with my proven analytical abilities, uniquely position me to be a strong technical leader with ambitions to grow in the data science field.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/vitoriamc/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/vmorenocosta"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://medium.com/@vitoriamorenocosta"><i class="fab fa-medium"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,16 +62,23 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Process Safety Management (PSM) Engineer</h3>
+                            <div class="subheading mb-3">International Flavors and Fragrances (IFF), formerly DuPont</div>
+                            <p>I leveraged my chemical engineering and manufacturing background to develop and implement the PSM program at the IFF Palo Alto R&D center (formerly DuPont and Genencor), which develops innovative techniques for enzyme production systems and renewable, bio-based products.
+                            <ul>
+                                <li>Analyzed 90 features on time-series data monitoring a trial of enzyme addition in a fuel ethanol plant. Developed Spotfire data visualizations to identify statistically significant impacts of various dosages on product flow rate and protein content. Demonstrated +20% yield improvement. Presented findings to the client and internal project & marketing teams.</li>
+                                <li>Established a 300+ action item tracker to ensure timely completion of safety recommendations. Created a Power Automate flow to automatically email owners when items are nearing due date or overdue.</li>
+                                <li>Led 70 hazard analyses and management of change for pilot-scale and laboratory biochemical processes. Collaborated with over 40 engineers, scientists, and technicians to identify and implement over 250 safety improvements.</li>
+                                <li>Launched the corporate LatinX Employee Resource Group in Sep 2021. Organized 2 global events, 1 local fundraiser, and increased membership from 6 to 150 employees across 26 countries.</li>
+                              </ul>
+                            </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2020-March 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
+                            <h3 class="mb-0">Process Engineer</h3>
+                            <div class="subheading mb-3">PBF Energy, previously Shell Oil Company</div>
                             <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
