--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                                 <div class="flex-shrink-0"><span class="text-primary">March 2022-June 2022</span></div>
                             </p>
                         </div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Process Safety Management (PSM) Engineer</h3>
@@ -102,6 +103,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2020-March 2022</span></div>
                     </div>
+                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Process Engineer</h3>
