working of fixing formatting

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">October 2020-March 2022</span></div>
                     </div>
-                    
+
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Process Engineer</h3>
@@ -136,8 +136,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Massachusetts Institute of Technology</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Chemical Engineering</div>
+                            <div class="subheading mb-3">Bachelor of Science, Chemical Engineering</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2014-June 2018</span></div>
                     </div>
@@ -155,6 +154,7 @@
                         <li><i class="fa-li fa fa-check"></i>Java</li>
                         <li><i class="fa-li fa fa-check"></i>HTML</li>
                     </ul>
+                    <p></p>
                     <div class="subheading mb-3">Tools</div>
                     <ul class="fa-ul mb-0">
                         <li><i class="fa-li fa fa-check"></i>SQL</li>
@@ -165,6 +165,7 @@
                         <li><i class="fa-li fa fa-check"></i>Git</li>
                         <li><i class="fa-li fa fa-check"></i>Power Automate</li>
                     </ul>
+                    <p></p>
                     <div class="subheading mb-3">Libraries</div>
                     <ul class="fa-ul mb-0">
                         <li><i class="fa-li fa fa-check"></i>NumPy</li>
@@ -186,7 +187,6 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a data scientist, I enjoy spending time outdoors, especially near water. On weekends, you can find me surfing in in Santa Cruz, CA with my husband (Erik). I also love cooking, traveling, and spending time with friends, family, and cat (Pancho). Like many others, my guilty pleasure is watching reality TV, in particular Survivor and The Bachelor.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
                 </div>
             </section>
             <hr class="m-0" />
@@ -198,10 +198,6 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                             2021 Process R&D Excellence Award - International Flavors and Fragrances (see details in experiences)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Girl Scout Gold Award
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
