fixed project links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <h3 class="mb-0">Data Science Immersive Scholar</h3>
                             <div class="subheading mb-3">Adobe Digital Academy Scholar, General Assembly</div>
                             <p>One of ten individuals selected for the Adobe Digital Academy scholarship which provides students with data science training through General Assembly’s Data Science Immersive (DSI) course. The 12-week, full-time bootcamp included curriculum in exploratory data analysis in Python, statistical modeling, and machine learning. Completed 6 projects both individually or with a team, including:
-                                <li><a href="https://github.com/vmorenocosta/project-capstone-watch-sales"></a>Forecasting and Modeling Watch Sales for B2B Distribution</li>
+                                <li><a href="https://github.com/vmorenocosta/project-capstone-watch-sales">Forecasting and Modeling Watch Sales for B2B Distribution</a></li>
                                 <ul>
                                     <li>Built a forecasting and classifications system that accurately and more quickly forecasts quarterly orders for both new and existing models for one watch brand sold by XYZ company, a real watch distribution company.</li>
                                     <li>Cleaned, merged, and processed 5 raw datasets into a source dataset with 1759 samples and 125 features.</li>
@@ -73,12 +73,12 @@
                                     <li>Developed a data pipeline to encode, scale, and classify models into sales performance categories using 14 features. Model slightly outperformed baseline accuracy (41% vs 29%).</li>
                                     <li>Built a script to combine forecast and predictions to generate order sheet.</li>
                                 </ul>
-                                <li><a href="https://github.com/vmorenocosta/NLP-Classification-Reddit-API"></a>Classification of Reddit posts using Natural Language Processing Techniques</li>
+                                <li><a href="https://github.com/vmorenocosta/NLP-Classification-Reddit-API">Classification of Reddit posts using Natural Language Processing Techniques</a></li>
                                 <ul>
                                     <li>Collected a dataset of 8,000 Reddit posts from r/WeddingPlanning and r/Divorce using a custom function utilizing Pushshift's API</li>
                                     <li>Developed a data pipeline to vectorize and classify posts & titles with 97.4% accuracy using an ensemble of logistic regression, random forest, and ada boost classification.</li>
                                 </ul>
-                                <li><a href="https://github.com/vmorenocosta/refinery-cancer-rates-geomap"></a>Geomap Visualization of Texas oil refineries and industrial cancer risk</li>
+                                <li><a href="https://github.com/vmorenocosta/refinery-cancer-rates-geomap">Geomap Visualization of Texas oil refineries and industrial cancer risk</a></li>
                                 <ul> Personal contributions:
                                     <li>Cleaned, merged, and processed 6 datasets from the US Energy Information Administration, EPA AirToxScreen, and EPA Toxic Release Source Inventory into a single source dataset by census tract</li>
                                     <li>Developed a Tableau visualization that maps refinery locations, calculated cancer risk from industrial sources, and raw cancer rates for the state of Texas.</li>
