--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Science Intern</h3>
+                            <div class="subheading mb-3">Adobe Inc.</div>
+                            <p>I am a Data Science intern in the Adobe Digital Experience Product & Customer Analytics team where I am using machine learning methods to optimize the user onboarding experience for Adobe Experience Cloud products.
+                            <ul>
+                                <li>Building a classification model that predicts each new user's persona in Adobe Analytics at the time of onboarding.</li>
+                                <li>Created and cleaned a training dataset from several disparate sources to develop a set of features to predict and validate against historical user personas using statistical methods.</li>
+                            </ul>
+                            </p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2020-March 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Data Science Immersive Scholar</h3>
                             <div class="subheading mb-3">Adobe Digital Academy Scholar, General Assembly</div>
                             <p>One of ten individuals selected for the Adobe Digital Academy scholarship which provides students with data science training through General Assembly’s Data Science Immersive (DSI) course. The 12-week, full-time bootcamp included curriculum in exploratory data analysis in Python, statistical modeling, and machine learning. Completed 6 projects both individually or with a team, including:
