--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             </ul>
                             </p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">October 2020-March 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022-Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
